fix: mobile => update spacing

--- a/6.Taking.it.to.the.next.level/2.Final.project.myself/css/style.css
+++ b/6.Taking.it.to.the.next.level/2.Final.project.myself/css/style.css
@@ -77,12 +77,13 @@ p {
 }
 
 header,
-.intro {
-  padding: 0 1rem;
-  padding-bottom: 2em;
+.intro,
+.skills {
+  padding: 0 1em;
+  padding-bottom: 3em;
 }
 .logo-accent {
-  height: 3rem;
+  height: 3em;
 }
 nav {
   text-align: center;
@@ -121,7 +122,7 @@ a:focus {
 }
 
 .intro-title {
-  padding-top: 1.5rem;
+  /* padding-top: 1.5rem; */
   line-height: 1.2;
 }
 .intro-title + p {
@@ -129,10 +130,10 @@ a:focus {
   letter-spacing: 1;
 }
 .intro-action {
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
 }
 .skills {
-  padding: 2.5em;
+  padding-top: 3em;
 }
 
 article {
@@ -188,7 +189,11 @@ a:active,
 footer {
   background-color: #ebebeb;
   text-align: center;
-  padding: 2em;
+  padding: 3em;
+}
+
+.social-icons {
+  margin-bottom: 3em;
 }
 /* End Typography */
 
@@ -210,4 +215,12 @@ header {
   width: 60vw;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.social-icons {
+  order: -1;
+}
 /* End Layout */
